force-app/main/default/objects/Kerridge_Quote__c/Kerridge_Quote__c.object-meta.xml
<CustomObject>
    <label>Kerridge Quote</label>
    <nameField>
        <label>Kerridge Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kerridge Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>