force-app/main/default/objects/Kerridge_Quote__c/fields/Date_created_in_CQM__c.field-meta.xml
<CustomField>
    <fullName>Date_created_in_CQM__c</fullName>
    <label>Date created in CQM</label>
    <type>DateTime</type>
</CustomField>