force-app/main/default/objects/Kerridge_Quote__c/fields/Date_last_modified_in_CQM__c.field-meta.xml
<CustomField>
    <fullName>Date_last_modified_in_CQM__c</fullName>
    <label>Date last modified in CQM</label>
    <type>DateTime</type>
</CustomField>