force-app/main/default/objects/Kerridge_Quote__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <label>Expiration date</label>
    <type>DateTime</type>
</CustomField>