force-app/main/default/objects/Kerridge_Quote__c/fields/Kerridge_Quote__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Quote__c</fullName>
    <externalId>true</externalId>
    <label>Kerridge Quote #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>