force-app/main/default/objects/Kerridge_Quote__c/fields/Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Id__c</fullName>
    <externalId>true</externalId>
    <label>Key Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>