force-app/main/default/objects/Kerridge_Quote__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Kerridge Quotes</relationshipLabel>
    <relationshipName>Kerridge_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>