force-app/main/default/objects/Kerridge_Quote__c/fields/Sequence_to_show_multiple_quotes__c.field-meta.xml
<CustomField>
    <fullName>Sequence_to_show_multiple_quotes__c</fullName>
    <label>Sequence to show multiple quotes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>