force-app/main/default/objects/Kerridge_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kerridge_Quote__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>